tests/errors/compiler/no_field_in_enum/no_field_in_enum_class_1.c
enum class Color : int
{
	red = 5,
	green,
	blue
};

int main()
{
	enum Color clr = Color::yellow;
	return 0;
}
